--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
   <ul>
     <li>
-      <a href="./bicicletas.magic.html">
+      <a href="./bicicletas/magic.html">
         <img src="./img/bicicletas/magic-home.jpg" alt="bicicleta preta">
         <h3 class="font-1-xl">Magic Might</h3>
         <span class="font2-m cor-8">R$ 2499</span>
@@ -58,7 +58,7 @@
     </li>
 
     <li>
-      <a href="./bicicletas.nimbus.html">
+      <a href="./bicicletas/nimbus.html">
         <img src="./img/bicicletas/nimbus-home.jpg" alt="bicicleta preta">
         <h3 class="font-1-xl">Nimbus Stark</h3>
         <span class="font2-m cor-8">R$ 4999</span>
@@ -66,7 +66,7 @@
     </li>
 
     <li>
-      <a href="./bicicletas.nebula.html">
+      <a href="./bicicletas/nebula.html">
         <img src="./img/bicicletas/nebula-home.jpg" alt="bicicleta preta">
         <h3 class="font-1-xl">Nebula Cosmic</h3>
         <span class="font2-m cor-8">R$ 3999</span>
