--- a/bicicletas.html
+++ b/bicicletas.html
@@ -8,6 +8,7 @@
   <title>Bicicletas | Bikcraft</title>
   <meta name="description" content="Bicicletas.">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +20,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"> 
       </a>
 
       <nav aria-label="primaria">
@@ -62,7 +63,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$ 4999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -82,7 +83,7 @@
     
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta preta">
+          <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$ 4999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -103,7 +104,7 @@
 
 <footer class="footer-bg">
   <div class="footer container">
-    <img src="./img/bikcraft.svg" alt="Bikcraft">
+    <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
     <div class="footer-contato">
       <h3 class="font-2-l-b cor-0">Contato</h3>
       <ul class="font-2-m cor-5">
@@ -114,13 +115,13 @@
       </ul>
       <div class="footer-redes">
         <a href="./">
-          <img src="./img/redes/instagram.svg" alt="Instagram">
+          <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
         </a>
         <a href="./">
-          <img src="./img/redes/facebook.svg" alt="Facebook">
+          <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
         </a>
         <a href="./">
-          <img src="./img/redes/youtube.svg" alt="Youtube">
+          <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
         </a>
       </div>
     </div>
