--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
   <title>Contato | Bikcraft</title>
   <meta name="description" content="Termos e condições.">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +20,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
@@ -94,7 +95,7 @@
   <article class="lojas container">
     <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
     <div class="lojas-item">
-      <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 35 Franca - São Paulo">
+      <img src="./img/lojas/rj.jpg" width="1120" height="520" alt="mapa marcando o endereço em Rua Ali Perto, 35 Franca - São Paulo">
       <div class="lojas-conteudo">
         <h3 class="font-1-xl">Franca</h3>
       <div class="lojas-dados font-2-s cor-8">
@@ -110,7 +111,7 @@
     </div>
 
     <div class="lojas-item">
-      <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 35 São Paulo - São Paulo">
+      <img src="./img/lojas/sp.jpg" width="1120" height="520" alt="mapa marcando o endereço em Rua Ali Perto, 35 São Paulo - São Paulo">
       <div class="lojas-conteudo">
         <h3 class="font-1-xl">São Paulo</h3>
       <div class="lojas-dados font-2-s cor-8">
@@ -128,7 +129,7 @@
 
 <footer class="footer-bg">
   <div class="footer container">
-    <img src="./img/bikcraft.svg" alt="Bikcraft">
+    <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
     <div class="footer-contato">
       <h3 class="font-2-l-b cor-0">Contato</h3>
       <ul class="font-2-m cor-5">
@@ -139,13 +140,13 @@
       </ul>
       <div class="footer-redes">
         <a href="./">
-          <img src="./img/redes/instagram.svg" alt="Instagram">
+          <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
         </a>
         <a href="./">
-          <img src="./img/redes/facebook.svg" alt="Facebook">
+          <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
         </a>
         <a href="./">
-          <img src="./img/redes/youtube.svg" alt="Youtube">
+          <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
         </a>
       </div>
     </div>
