--- a/termos.html
+++ b/termos.html
@@ -95,6 +95,7 @@
     <p class="footer-copy font-2-m cor-6">Bikcraft Alguns dos seus direitos reservados</p>
   </div>
 </footer>
+<script src="./js/script.js"></script>
 </body>
 
 </html>
