--- a/seguros.html
+++ b/seguros.html
@@ -44,7 +44,7 @@
 
       <div class="seguros container">
   
-      <div class="seguros-items">
+      <div class="seguros-items fadeInLeft" data-anime="200">
         <h3 class="font-1-xl cor-6">PRATA</h3>
         <span class="font-1-xl cor-0">R$ 199<span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -56,7 +56,7 @@
         <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
       </div>
   
-      <div class="seguros-items">
+      <div class="seguros-items fadeInRight" data-anime="400">
         <h3 class="font-1-xl cor-p1">OURO</h3>
         <span class="font-1-xl cor-0">R$ 299<span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -184,6 +184,7 @@
     <p class="footer-copy font-2-m cor-6">Bikcraft Alguns dos seus direitos reservados</p>
   </div>
 </footer>
+<script src="./js/pluglin/simple-anime.js"></script>
 <script src="./js/script.js"></script>
 </body>
 
